<resources>
    <string name="app_name">Checkers</string>
    <string name="clear">clear</string>

    <string name="onePlayer">1 Player</string>
    <string name="twoPlayers">2 Players</string>
    <string name="online">Online</string>
    <string name="settings">Settings</string>
    <string name="version">1.0</string>

    <string name="language">Language:</string>
    <string name="name">Name:</string>
    <string name="variants">Variants:</string>
    <string name="ok">OK</string>

    <string name="start">Start</string>

    <string name="english">English</string>

    <string name="RoomName">Room Name</string>
    <string name="player1">Player1</string>
    <string name="player2">Player2</string>
    <string name="ai">AI</string>
    <string name="offerDraw">offer draw</string>

    <string name="CREATE_ROOM">CREATE ROOM</string>
    <string name="JOIN">JOIN</string>

    <string name="SCORE">SCORE:</string>
    <string name="nula">0</string>

    <!-- Custom dialog -->
    <string name="win">YOU WIN!</string>
    <string name="lose">YOU LOSE!</string>
    <string name="rematch">Rematch</string>
    <string name="close">Close</string>

</resources>
