<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    tools:context=".activitys.MainActivity">

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:background="#80FFFFFF"
        android:fontFamily="sans-serif-black"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/onlineButton"
        app:layout_constraintStart_toStartOf="@+id/onlineButton"
        app:layout_constraintTop_toBottomOf="@+id/onlineButton" />

    <Button
        android:id="@+id/onlineButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:background="#80FFFFFF"
        android:fontFamily="sans-serif-black"
        android:text="@string/online"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/settingsButton"
        app:layout_constraintEnd_toEndOf="@+id/player2Button"
        app:layout_constraintStart_toStartOf="@+id/player2Button"
        app:layout_constraintTop_toBottomOf="@+id/player2Button" />

    <Button
        android:id="@+id/player2Button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:background="#80FFFFFF"
        android:fontFamily="sans-serif-black"
        android:text="@string/twoPlayers"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/onlineButton"
        app:layout_constraintEnd_toEndOf="@+id/player1Button"
        app:layout_constraintStart_toStartOf="@+id/player1Button"
        app:layout_constraintTop_toBottomOf="@+id/player1Button" />

    <Button
        android:id="@+id/player1Button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="200dp"
        android:background="#80FFFFFF"
        android:fontFamily="sans-serif-black"
        android:text="@string/onePlayer"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/player2Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nazov" />

    <ImageView
        android:id="@+id/nazov"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:contentDescription="@string/clear"
        app:layout_constraintBottom_toTopOf="@+id/player1Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/nazov" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/version"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>